cargo-features = ["edition2021"]

[[bin]]
name = "mychain"
path = "src/main.rs"

[package]
name = "mychain"
version = "0.1.0"
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "MyChain cli allowing to take-over live-chains locally."
edition = "2018"
license = "LGPL-3.0"
default-run = "mychain"
homepage = "https://centrifuge.io/"
repository = "https://github.com/centrifuge/mychain"


[workspace]
members = [
    "chains/kusama",
    "chains/polkadot",
    "chains/centrifuge",
    "chains/altair",
    "core"
]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0.30"
hex = "0.4.3"

# substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.12" }

# local dependencies
mychain-core = {path = "./core"}
mychain-polkadot = {path = "./chains/polkadot"}
mychain-centrifuge = {path = "./chains/centrifuge"}

[features]
default = ["std"]
std = [
    "sp-core/std"
]


